add _getRoomByIdHandler
